2011-05-24  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2010-09-20  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/42775
	* cfgrtl.c (rest_of_pass_free_cfg): Recompute notes if delay slot
	scheduling is enabled.

	PR rtl-optimization/49007
	Backport from mainline:
	2009-11-30  Hans-Peter Nilsson  <hp@axis.com>

	PR rtl-optimization/40086
	* reorg.c (relax_delay_slots): When looking for redundant insn at
	the branch target, use next_real_insn, not next_active_insn.

2011-05-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR rtl-optimization/48932
	Backport from mainline:
	2010-09-15  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/45593
	* reorg.c (relax_delay_slots): Use emit_copy_of_insn_after to re-emit
	insns that were in delay slots as stand-alone insns.

2011-05-05  Julian Brown  <julian@codesourcery.com>

	* config/arm/neon.md (vec_set<mode>_internal): Fix misplaced
	parenthesis in D-register case.

2011-02-26  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2010-08-22  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR boehm-gc/34544
	* gthr-posix.h (__gthread_active_init): Delete.
	(__gthread_active_p): Do activity check here.
	Don't include errno.h on hppa-hpux.  Update comment.
	* gthr-posix95.h (__gthread_active_init): Delete.
	(__gthread_active_p): Do activity check here.
	Don't include errno.h on hppa-hpux.  Update comment.

2011-02-24  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config.gcc (hppa[12]*-*-hpux11*): Set extra_parts.
	* config/pa/stublib.c (pthread_default_stacksize_np, pthread_mutex_lock,
	pthread_mutex_unlock, pthread_once): New pthread stubs.
	* config/pa/t-pa-hpux11: Add rules to build pthread stubs.
	* config/pa/t-pa64: Likewise.
	* config/pa/pa-hpux11.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
	(LIB_SPEC): In static links, link against shared libc if not linking
	against libpthread.
	* config/pa/pa64-hpux.h (LIB_SPEC): Likewise.
